// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CartCount /> matches the snapshot 1`] = `
<CartCount__AnimationStyles>
  <TransitionGroup
    childFactory={[Function]}
    component="div"
  >
    <CSSTransition
      className="count"
      classNames="count"
      key="10"
      timeout={
        Object {
          "enter": 600,
          "exit": 600,
        }
      }
      unmountOnExit={true}
    >
      <CartCount__GreenDot>
        10
      </CartCount__GreenDot>
    </CSSTransition>
  </TransitionGroup>
</CartCount__AnimationStyles>
`;

exports[`CartCount /> updates via props 1`] = `
<CartCount__AnimationStyles>
  <TransitionGroup
    childFactory={[Function]}
    component="div"
  >
    <CSSTransition
      className="count"
      classNames="count"
      key="50"
      timeout={
        Object {
          "enter": 600,
          "exit": 600,
        }
      }
      unmountOnExit={true}
    >
      <CartCount__GreenDot>
        50
      </CartCount__GreenDot>
    </CSSTransition>
  </TransitionGroup>
</CartCount__AnimationStyles>
`;

exports[`CartCount /> updates via props 2`] = `
<CartCount__AnimationStyles>
  <TransitionGroup
    childFactory={[Function]}
    component="div"
  >
    <CSSTransition
      className="count"
      classNames="count"
      key="10"
      timeout={
        Object {
          "enter": 600,
          "exit": 600,
        }
      }
      unmountOnExit={true}
    >
      <CartCount__GreenDot>
        10
      </CartCount__GreenDot>
    </CSSTransition>
  </TransitionGroup>
</CartCount__AnimationStyles>
`;
